# testfrontend

./: connection.txt  tt.txt
controller/: README.md  requirements.txt
controller/app/: config.py  logging_config.py  main.py  session_manager.py  state.py
controller/app/backend/: http_client.py  security.py  ws_client.py
controller/app/crypto/: ecdsa.py
controller/app/sensors/: realsense.py  tof.py
controller/tof/: CMakeLists.txt
controller/tof/include/: tof_reader.hpp
controller/tof/src/: main.cpp  tof_reader.cpp
d435i/: CMakeLists.txt  central_depth_liveness.cpp  mediapipe_liveness.py
mdai-ui/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
mdai-ui/src/: App.js  App.tsx
mdai-ui/src/app-state/: sessionMachine.js  sessionMachine.ts
mdai-ui/src/components/: ControlPanel.js  ControlPanel.tsx  ErrorOverlay.js  ErrorOverlay.tsx  IdleScreen.js  IdleScreen.tsx  InstructionStage.js  InstructionStage.tsx  LogConsole.js  LogConsole.tsx  QRCodeStage.js  QRCodeStage.tsx  StageRouter.js  StageRouter.tsx
mdai-ui/src/hooks/: useControllerSocket.js  useControllerSocket.ts
mdai-ui/src/styles/: index.css
mdai-ui/src/types/: dashboard.ts
